Clean up Aggregator Supplier Boiler Plate (#57442)
 Conflicts:
	server/src/main/java/org/elasticsearch/search/aggregations/bucket/range/AbstractRangeAggregatorFactory.java
	server/src/main/java/org/elasticsearch/search/aggregations/metrics/AvgAggregatorFactory.java
	server/src/main/java/org/elasticsearch/search/aggregations/metrics/MaxAggregatorFactory.java
	server/src/main/java/org/elasticsearch/search/aggregations/metrics/MinAggregatorFactory.java
	server/src/main/java/org/elasticsearch/search/aggregations/metrics/StatsAggregatorFactory.java
	server/src/main/java/org/elasticsearch/search/aggregations/metrics/SumAggregatorFactory.java